[gd_scene load_steps=3 format=3 uid="uid://dr2nl52h3gq8"]

[ext_resource type="Script" uid="uid://bqtb7nyqapcuw" path="res://Scripts/pause.gd" id="1_l2mpd"]
[ext_resource type="FontFile" uid="uid://b1p5e4cluvlo7" path="res://Fonts/Minecraftia-Regular.ttf" id="1_o80xk"]

[node name="pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_l2mpd")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.2)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -37.0
offset_right = 47.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2

[node name="retornar_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 16
text = "Retornar ao Jogo"

[node name="recarregar_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 16
text = "Recarregar √Årea"

[node name="menu_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 16
text = "Menu Principal"

[connection signal="pressed" from="VBoxContainer/retornar_button" to="." method="_on_retornar_button_pressed"]
[connection signal="pressed" from="VBoxContainer/recarregar_button" to="." method="_on_recarregar_button_pressed"]
[connection signal="pressed" from="VBoxContainer/menu_button" to="." method="_on_menu_button_pressed"]
